apps/vault/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.36.0 # {"$imagepolicy": "flux-system:vaultwarden"}
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 80
              name: http
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden
